--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -154,7 +154,7 @@ We then consider the implications for understanding forest responses to global c
 ## 1. The biophysical environment
 
 The biophysical environment, defined here to include the physical structure of the vegetation and associated physical conditions, varies vertically from the forest floor to the top of the canopy (Figs. `r fig_schematic`, `r fig_NEON_vertical`), with physical conditions largely determined by forest structure.
-In this section, we review of the existing literature and provide a new analysis of data on vegetation structure and vertical microclimate profiles from focal sites within the U.S. National Ecological Observatory Network (NEON; Fig. `r fig_NEON_vertical`, Supporting Information Methods `r appendix_NEON_methods`, Supporting Information Figure `r SIfig_NEON_all`).
+In this section, we review of the existing literature and analyze data on vegetation structure and vertical microclimate profiles from focal sites within the U.S. National Ecological Observatory Network (NEON; Fig. `r fig_NEON_vertical`, Supporting Information Methods `r appendix_NEON_methods`, Supporting Information Figure `r SIfig_NEON_all`).
 Although we focus on vertical gradients, it is important to note that in heterogeneous canopies with high gap fractions and large variation in tree height, or at forest edges, the biophysical environment can be more closely linked to the distance from the outer edge of vegetation than to height [@lowmanForestCanopies1995]. 
 
 ![**Figure `r fig_NEON_vertical`. Vertical gradients in the biophysical environment for six US forest sites in the National Ecological Observatory Network (NEON)**. Height profiles, normalized relative to the top of the canopy, are shown for: growing season (a) modelled leaf area density, (b) estimated proportion of sun leaves, and (c) proportion of light incident to the top of the canopy (as fraction relative to to top of canopy), and for July mean ± 1 standard deviation for (d) maximum photosynthetically active radiation (PAR), (e) maximum wind speed, (f) minimum humidity (min RH), (g) maximum air temperature ($T_{air}$), and (h) maximum biological temperature, ($T_{bio}$). Measurements extend from ground level (normalized height = 0 m) to the top of the canopy (horizontal dashed line at normalized height = 1) or above (d-g). Variables shown in panels a-c are derived from lidar, and those shown in panels d-h from micrometeorological tower data. Sites, which represent a variety of forest structures, include a mixed northern hardwood forest (Harvard Forest, MA; HARV), a subtropical longleaf pine savanna (Ordway-Swisher Biological Station, FL; OSBS), a tropical montane broadleaf evergreen forest (Pu'u Maka'ala Natural Area Reserve, Hawai'i; PUUM), two temperate broadleaf forests (Smithsonian Conservation Biology Institute, VA, SCBI; Smithsonian Environmental Research Center, MD, SERC), and a coniferous forest (Wind River Experimental Forests, WA; WREF). Further site information is given in Supporting Information Table `r NEON_sites`, and analysis details in Supporting Information Methods `r appendix_NEON_methods`. Vertical profiles in micrometeorological variables (d-h) at all forested NEON sites are shown in Supporting Information Figure `r SIfig_NEON_all`.](NEON_height_profiles/figures/Fig2_normalized.png)
@@ -575,33 +575,32 @@ Ultimately, to achieve the important goal of understanding feedbacks between the
 
 ### Representing Vertical Gradients in Models
 
-Future forest dynamics remain one of the largest sources of uncertainty in Earth system model projections of the future of global carbon cycling and climate change [@friedlingsteinClimateCarbonCycle2006; @aroraCarbonConcentrationCarbon2020].
+Future forest dynamics remain one of the largest sources of uncertainty in Earth system model projections of global carbon cycling [@friedlingsteinClimateCarbonCycle2006; @aroraCarbonConcentrationCarbon2020].
 Dynamic global vegetation models (DGVMs), which comprise the land surface models in Earth system models, are used to predict the global distribution of vegetation types and biosphere-atmosphere feedbacks [@foleyIntegratedBiosphereModel1996; @sitchEvaluationEcosystemDynamics2003; @woodwardVegetationDynamicsSimulating2004]. 
-DGVMs operate at a range of scales and vary in complexity, from detailed individual-based models (i.e., forest gap models), which represent vegetation at the level of individual plants, capturing spatial variability in the light environment and microclimates at high vertical and horizontal spatial resolution [@shugartGapModelsTheir2018], to big-leaf models that reduce 3D vegetation structure across the entire biosphere into a single vegetation layer, implicitly capturing vertical profiles in light, photosynthetic capacity and other features by assuming those profiles are exponential and thus can be integrated analytically [@bonanDynamicGlobalVegetation2003; @krinnerDynamicGlobalVegetation2005]. 
-This simplification is computationally more efficient, although it does not always capture observed vertical profiles (sections 1-4; for example, vertical shifts in the balance between stomatal conductance and photosynthetic capacity, see sections 4.1-4.2) and comes at a cost of a lack of representation of important demographic processes and vertical light competition [@hurttTerrestrialModelsGlobal1998; @krinnerDynamicGlobalVegetation2005; @smithRepresentationVegetationDynamics2001]. 
-The computational middle-ground to representing vertical structure in DVGMs lies in cohort-based models, which represent vegetation as cohorts of individual plants, grouped together based on properties including size, age, and functional type [@fisherVegetationDemographicsEarth2018].
-These sit between the oversimplified vegetation dynamics in big-leaf models, which do not represent any vertical stratification, and individual-based models, whose computational expense prevents them from being integrated into Earth system models. 
+DGVMs operate at a range of scales and vary in complexity, from detailed individual-based models (i.e., forest gap models), which represent vegetation at the level of individual plants, which capturing spatial variability in light environment and microclimates at high 3D spatial resolution [@shugartGapModelsTheir2018], to big-leaf models that reduce 3D vegetation structure to single vegetation layer, implicitly capturing vertical profiles in light, photosynthetic capacity and other features by assuming those profiles are exponential and thus can be integrated analytically [@bonanDynamicGlobalVegetation2003; @krinnerDynamicGlobalVegetation2005]. 
+This simplification is computationally more efficient, but does not always capture observed vertical profiles (sections 1-4; for example, vertical shifts in the balance between stomatal conductance and photosynthetic capacity, see sections 4.1-4.2) and cannot capture important demographic processes and vertical light competition [@hurttTerrestrialModelsGlobal1998; @krinnerDynamicGlobalVegetation2005; @smithRepresentationVegetationDynamics2001]. 
+The computational middle-ground lies in cohort-based models, which represent vegetation as cohorts of individuals, grouped together based on properties including size, age, and functional type [@fisherVegetationDemographicsEarth2018].
 
 Owing to differences in the representation of forest vertical strata, DVGMs vary in their capacity to incorporate vertical variation in leaf traits and physiological processes. 
 In general, however, this variation is accounted for via light competition. 
-Models partition incoming radiation and radiation within the forest vertical profile (i.e., direct vs. diffuse light) using radiative transfer models or a system of two coupled ordinary differential equations, referred to as a two-stream approximation [@sellersCanopyReflectancePhotosynthesis1985; @fisherVegetationDemographicsEarth2018]. 
-Using the latter method, single canopy layers are divided into sun and shade fractions (e.g., in the Community Land Model, CLM model), while models with multiple vegetative layers can analytically solve the two-stream approximation for each layer. Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing LAI, or lower light conditions [Table 2, e.g., @krinnerDynamicGlobalVegetation2005]. 
-In recent years, there has been a growing effort to incorporate vertical variation more directly in models, specifically as it pertains to leaf water potential and light absorption by leaves, along with a general increasing interest in making direct comparison between models and field measurements [@fisherPerspectivesFutureLand2020]. Several recent model developments are at the cutting edge of representing vertical variation. 
-Model developments by @chenColumnCanopyAirTurbulent2019, @bonanModelingCanopyinducedTurbulence2018, and @longoBiophysicsEcologyBiogeochemistry2019 implement vertical gradients of irradiance, water content, leaf temperature, and the feedback between the evaporation of water into the vegetated air space and the humidity of the airspace, modulated by turbulence processes within the forest and a roughness layer that extends to roughly twice the height of the canopy [@fisherPerspectivesFutureLand2020]. 
+Models partition radiation above and within the forest vertical profile (i.e., direct vs. diffuse light) using radiative transfer models or a system of two coupled ordinary differential equations, referred to as a two-stream approximation [@sellersCanopyReflectancePhotosynthesis1985; @fisherVegetationDemographicsEarth2018]. 
+Using the latter method, single canopy layers are divided into sun and shade fractions (e.g., in the Community Land Model, CLM model), while models with multiple vegetative layers can analytically solve the two-stream approximation for each layer. 
+Thus, even in single-layer models, key physiological parameters like $V_{cmax}$ and $J_{max}$ vary, decreasing with increasing cumulative LAI or lower light conditions [Table 2, e.g., @krinnerDynamicGlobalVegetation2005]. 
+Recent years have seen growing efforts to incorporate vertical variation more directly in models, specifically involving leaf water potential and light absorption, along with a increasing interest in confronting models directly with field measurements [@fisherPerspectivesFutureLand2020]. Several recent model developments are at the cutting edge of representing vertical variation. 
+Model developments by @chenColumnCanopyAirTurbulent2019, @bonanModelingCanopyinducedTurbulence2018, and @longoBiophysicsEcologyBiogeochemistry2019 implement vertical gradients of irradiance, water content, $T_{leaf},$ and humidification of canopy air by transpiration, modulated by turbulence within the forest and a roughness layer that extends to roughly twice the canopy height [@fisherPerspectivesFutureLand2020]. 
 
 The findings of this review reinforce the notion that representing vertical structuring is essential to capturing forest dynamics under global change.
-Improved representation of vertical variation in forest structure and ecosystem function is critical for representing thermal sensitivity and has repeatedly been identified as an important step toward reduced uncertainty and more accurate characterization of biologically mediated feedbacks [@moorcroftMethodScalingVegetation2001; @banerjeeEffectVerticalCanopy2018; @bonanMovingIncorrectUseful2021]. 
-Moreover, given the anticipated importance of mid-canopy and understory trees in ecosystem resilience to increasing mortality of canopy trees, it is absolutely essential that models separately represent these strata. However, doing so will require improved understanding of the mechanisms controlling vertical gradients.
-
-A key question is whether existing models adequately represent the processes that underpin understory tree responses to thermal stress as well as large tree responses.
-Most models have been developed to capture dynamics in the canopy, given the disproportionate role of these large trees in ecosystem dynamics (Fig. `r fig_ecosystem`). 
+Improved representation of vertical variation in forest structure and ecosystem function is critical for representing thermal sensitivity and has repeatedly been identified as important for reducing uncertainty and accuratly characterizating of biologically mediated feedbacks [@moorcroftMethodScalingVegetation2001; @banerjeeEffectVerticalCanopy2018; @bonanMovingIncorrectUseful2021]. 
+Moreover, given the anticipated importance of mid-canopy and understory trees in ecosystem resilience given increasing mortality of canopy trees, it is essential that models separately represent these strata. 
+A key question is whether existing models adequately represent the processes that underpin understory and large tree responses to thermal stress.
+Most models have been developed to capture dynamics in the upper canopy, given the disproportionate role of large trees in ecosystem dynamics (Fig. `r fig_ecosystem`). 
 Less attention has focused on developing and validating understory tree dynamics and responses to perturbations in models. 
-This is likely due in large part to the fact that observational and experimental studies required to resolve key patterns and underlying mechanisms remain sparse (see sections 4, 5).
-Pairing of models and observational studies will be important for further improving our mechanistic understanding of vertical gradients and their implications.
+This is due in large part to the paucity of observational and experimental studies needed to resolve key patterns and underlying mechanisms (see sections 4, 5).
+Pairing of models with observational studies is key to further improving our mechanistic understanding of vertical gradients and their implications.
 
 Though an improvement over big-leaf models, DGVMs that separate the canopy into only two layers [e.g., sunlit and shaded portions, @depurySimpleScalingPhotosynthesis1997] may not be able to capture important within-canopy variation in terms of leaf dynamics [e.g., seasonal shifts in vertical leaf area distributions, Table 1, @smithSeasonalDroughtrelatedChanges2019] and functions (e.g., thermal responses, Table 2). 
-At the very least, multi-layered ecosystem models will likely be necessary for accurately predicting future forest function [e.g., @bonanMovingIncorrectUseful2021].
-In addition, capturing the vertical gradients in ET, GPP, respiration, and woody growth, and subsequently the net ecosystem effects (Figs. `r fig_treerings` - `r fig_ecosystem`), requires improved characterization of the functional response of leaf-level processes (Table `r table_leaf_metabolism`, Fig. `r fig_leaf_T`) to vertically varying abiotic conditions (Fig. `r fig_NEON_vertical`), and the role of traits (Table `r table_leaf_traits`) in mediating responses to thermal sensitivity. 
+Multi-layered ecosystem models will likely be necessary for accurately predicting future forest function [e.g., @bonanMovingIncorrectUseful2021].
+In addition, capturing vertical gradients in ET, GPP, respiration, and woody growth, and subsequently the net ecosystem effects (Figs. `r fig_treerings` - `r fig_ecosystem`), requires improved characterization of the functional response of leaf-level processes (Table `r table_leaf_metabolism`, Fig. `r fig_leaf_T`) to vertically varying abiotic conditions (Fig. `r fig_NEON_vertical`), and the role of traits (Table `r table_leaf_traits`) in mediating responses to thermal sensitivity. 
 
 
 ### Scaling in situ data with remote sensing
@@ -609,23 +608,23 @@ In addition, capturing the vertical gradients in ET, GPP, respiration, and woody
 Remote sensing data provide a valuable means to scale between *in situ* observations and DGVMs.
 Specifically, the increasing availability of airborne and spaceborne lidar and thermal remote sensing data offer a promising opportunity for mapping vertical thermal gradients in combination with vegetation structure at locations with *in situ* data and across larger landscapes (Fig. `r fig_model`). 
 Airborne and spaceborne lidar, as well as terrestrial laser scanning data, yield detailed 3D reconstructions of whole tree and forest structure. 
-These data can be leveraged in combination with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based Forward Looking Infrared cameras. 
+These data can be leveraged in combination with thermal remote sensing data from the spaceborne ECOSTRESS sensor [@hulleyNewECOSTRESSMODIS2019; @fisherECOSTRESSNASANext2020] or drone- and tower-based Forward Looking Infrared (FLIR) cameras. 
 
 
 ![**Figure `r fig_model`.** Lidar and thermal remote sensing data can be used to measure vertical forest structure and plant thermal signatures at increasingly large scales. (a-b) Integrating in situ and remote sensing measurements will support our ability to scale understanding of vertical gradients within and across ecosystems. (c) In turn, these efforts can be used to directly inform ecosystem model development and parameterization. Vertically resolved in situ data could include any variable listed in Table 1 or 2. Panel b shows drone lidar point cloud data colored with thermal data from a savanna woodland in Kruger National Park, South Africa illustrating vertical and horizontal variation in vegetation temperature. Image courtesy of the Harvard Animal-Landscape Observatory, Peter B. Boucher and Andrew B. Davies.](schematics/fig_remote_sensing.png)
 
-Detailed structural information from lidar data has been used to measure tree height, DBH, and crown dimensions [@fisherECOSTRESSNASANext2020], evaluate spatial variation in vertical leaf area density profiles [@dettoSpatialVariabilityTropical2015], and resolve complex seasonal and diurnal variation in shortwave radiation forcing in ecosystems [@musselmanEstimationSolarDirect2013].
-In addition, shading by the canopy can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other lidar-based analyses [e.g., @davisLiDARderivedTopographyForest2019].
+Detailed structural information from lidar data can be used to measure tree height, DBH, and crown dimensions [@fisherECOSTRESSNASANext2020], evaluate spatial variation in vertical leaf area density profiles [@dettoSpatialVariabilityTropical2015], and resolve complex seasonal and diurnal variation in shortwave radiation forcing in ecosystems [@musselmanEstimationSolarDirect2013].
+Canopy shading can be better represented to predict understory temperatures by modeling the time-varying interaction of the forest canopy with solar radiation, as has been done in other lidar-based analyses [e.g., @davisLiDARderivedTopographyForest2019].
 Satellite and airborne thermal infrared remote sensing analyses are now being conducted at regional and continental scales, although very few applications exist at finer-scales necessary for understanding of vertical variation in plant canopy temperatures [@johnstonWhatLiesVerticalinpress]. 
-As an example of the type of insight that can be gained from this approach, @pauTropicalForestTemperature2018 used data from a tower-based Forward Looking Infrared camera in combination with eddy-covariance data and found that tropical forest canopy temperatures were more strongly associated with GPP than $T_{air}$ or VPD.
+As an example of the type of insight that can be gained from this approach, @pauTropicalForestTemperature2018 used data from a tower-based FLIR camera in combination with eddy-covariance data and found that tropical forest canopy temperatures were more strongly associated with GPP than $T_{air}$ or VPD.
 In a savanna system in the western U.S., @johnstonWhatLiesVerticalinpress found significant vertical variation in plant temperature, with warmer temperatures in the understory compared to the top of the blue oak canopies -- a finding that occurred in association with very high grass temperatures and consistent with the principles outlined in sections 1-2 (Fig. `r SIfig_NEON_all`).
-The growing availability of these data makes this an opportune time to link fine-scale and landscape-scale measurements with the type of *in situ* measurements reviewed above to further explore ecosystem-scale patterns in vertical temperature gradients seasonally and across biomes. 
+The growing availability of these data makes this an opportune time to link fine-scale and landscape-scale measurements with the type of *in situ* measurements reviewed above to explore ecosystem-scale patterns in vertical temperature gradients seasonally and across biomes. 
 
 
 ## IV. Conclusions
 
 Across vertical gradients, directional trends in the biophysical environment and leaf traits are the rule, driving variation in the physiology and ecology that have these as their underpinnings (Fig. `r fig_schematic`).
-However, there remains a lot of uncertainty as to how temperature sensitivity of foliar gas exchange varies across these vertical gradients.
+However, uncertainty remains as to how temperature sensitivity of foliar gas exchange varies across these vertical gradients.
 Similarly, much remains to be learned about how crown exposure influences the temperature sensitivity of woody stem growth. 
 While the preponderance of available data suggest that large canopy trees are the most vulnerable to warming when water is limited, far less is known about the responses of understory trees, which might be more vulnerable to chronic warming stress under relatively mesic conditions (Fig. `r fig_treerings`). 
 
