--- a/vertical-thermal-review.Rmd
+++ b/vertical-thermal-review.Rmd
@@ -127,8 +127,8 @@ As the climate changes, integrating the patterns and mechanisms reviewed here in
 # I. Introduction
 
 Forest responses and feedbacks to climate change will critically influence Earth's furture climate.
-Global average temperatures have risen 1.2$^\circ$C since 1900 [@rohdeBerkeleyEarthLand2020] and are expected to reach +1.5$^\circ$C by 2040 [@ipccClimateChange20212021], accompanied by increasing severity and frequency of heat waves [@meehlMoreIntenseMore2004; @ipccClimateChange20212021] and hotter droughts [@trenberthGlobalWarmingChanges2014].
-These changes are expected to affect tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilities2021; @portnerScientificOutcomeIPBESIPCC2021] by altering rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities2021; @corlettImpactsWarmingTropical2011; @scafaroResponsesLeafRespiration2021], causing foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reducing growth and elevating mortality during drought [@breshearsUnderappreciatedPlantVulnerabilities2021; @mcdowellPervasiveShiftsForest2020]. 
+Global average temperatures have risen 1.2$^\circ$C since 1900 [@rohdeBerkeleyEarthLand2020] and are expected to reach +1.5$^\circ$C by 2040 [@ipccClimateChange20212021], accompanied by increasing severity and frequency of heat waves and hotter droughts [@meehlMoreIntenseMore2004; @ipccClimateChange20212021].
+These changes are expected to affect tree metabolism and forest ecosystem function [@breshearsUnderappreciatedPlantVulnerabilities2021; @portnerScientificOutcomeIPBESIPCC2021] by altering rates of photosynthesis and respiration [@breshearsUnderappreciatedPlantVulnerabilities2021; <!--@corlettImpactsWarmingTropical2011-->; @scafaroResponsesLeafRespiration2021], causing foliar damage during heat waves [@osullivanThermalLimitsLeaf2017; @corlettImpactsWarmingTropical2011], and reducing growth and elevating mortality during drought [@breshearsUnderappreciatedPlantVulnerabilities2021; @mcdowellPervasiveShiftsForest2020]. 
 Warming may increase or decreased tree growth and forest carbon sequestration on balance, with decreases being more common globally [@oishiWarmerTemperaturesReduce2018; @sullivanLongtermThermalSensitivity2020; @anderson-teixeiraCarbonCyclingMature2021]. 
 The resulting feedbacks to climate and carbon storage, and changes in albedo and hydrology will in turn impact the future trajectory of climate change [@bonan_ecological_2016], yet the degree of the impact remains uncertain [@krauseLargeUncertaintyCarbon2018; @friedlingsteinClimateCarbonCycle2006].
  
@@ -161,10 +161,10 @@ Although we focus on vertical gradients, it is important to note that in heterog
 
 Canopy foliage is the primary physical barrier between the atmosphere and the forest floor, buffering multiple aspects of the understory conditions from large fluctuations in conditions experienced above the canopy. It strongly influences -- and is influenced by -- the vertical biophysical gradient (Fig. `r fig_NEON_vertical`).
 Vertical patterns in leaf area density (*i.e.*, leaf area per unit volume) differ across forests (Fig. `r fig_NEON_vertical`a-b, Supporting Information Figure `r SIfig_NEON_all`). 
-In tropical and temperate forests with dense broadleaf canopies, leaf area density is generally highest in the canopy layer (i.e., that formed by the crowns of dominant trees), but understory leaf area density is often high as well, sometimes causing undulating patterns with height [e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a,@terborghVerticalComponentPlant1985; @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993; @parkerVerticalProfileCanopy1989; @dominguesParameterizationCanopyStructure2005]. 
+In tropical and temperate forests with dense broadleaf canopies, leaf area density is generally highest in the canopy layer (i.e., that formed by the crowns of dominant trees), but understory leaf area density is often high as well, sometimes causing undulating patterns with height [e.g., SCBI, SERC and HARV, Fig. `r fig_NEON_vertical`a,<!--@terborghVerticalComponentPlant1985;--> @ashtonComparisonsStructureMixed1992; @koikeCanopyStructureTropical1993; @parkerVerticalProfileCanopy1989; @dominguesParameterizationCanopyStructure2005]. 
 In forests with more open upper canopies, including many needle-leaf forests, leaf area density can be greatest in the lower canopy or understory [e.g., PUUM and WREF, Fig. `r fig_NEON_vertical`a, @baldocchiSeasonalVariationEnergy1997; @hanberryOpenForestEcosystems2020; @lawLeafAreaDistribution2001;@bonan_ecological_2016]. 
 Soil moisture conditions, topography, and gap formations following disturbances all alter foliage patterns [e.g., @bonan_ecological_2016; @almeidaContrastingFireDamage2016; @starkAmazonForestCarbon2012; @hanberryOpenForestEcosystems2020]. 
-In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting leaf area density patterns [@parkerStructuralPhenologyLeaf2004; @parkerConsequencesEnvironmentalHeterogeneity2019; @smithSeasonalDroughtrelatedChanges2019; @tangLightdrivenGrowthAmazon2017; @nunesForestFragmentationImpacts2022]. 
+In addition, seasonally dry and wet conditions, deciduousness, and phenology contribute to temporally shifting leaf area density patterns [<!--@parkerStructuralPhenologyLeaf2004;--> @parkerConsequencesEnvironmentalHeterogeneity2019; @smithSeasonalDroughtrelatedChanges2019; @tangLightdrivenGrowthAmazon2017; @nunesForestFragmentationImpacts2022]. 
 In this review, we focus on growing season conditions (peak leaf area index, LAI) unless otherwise noted.
 
 The intensity of visible and photosynthetically active radiation (PAR, 400-700nm) decreases from the canopy top to the forest floor, with a profile whose shape is modified by leaf area density, leaf clumping, canopy height, and vertical structure across species and forest types [Fig. `r fig_NEON_vertical`d, Supporting Information Figure `r SIfig_NEON_all`, @belandVerticalStructureHeterogeneity2021; @koike_leaf_2001; @binLeafTraitExpression2022].
